added additional info

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
       <td>Watchers</td>
       <td>Ted Lasso</td>
     </tr>
+    <tr>
+      <td>Pirates</td>
+      <td>To Kill a Mockingbird</td>
+      <td>Bob's Burgers</td>
+    </tr>
+    <tr>
+      <td>Bridget Jones</td>
+      <td>Any Harry Potter</td>
+      <td>Game of Thrones</td>
+    </tr>
     </tbody>
 
   </table>
