--- a/visuals_2.html
+++ b/visuals_2.html
@@ -12,7 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         
-        <link rel="stylesheet" href="style.css"    
+        <link rel="stylesheet" href="style.css">    
     
       </head>
 
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="intro.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://github.com/HeathMo/web_design_challenge">GitHub Link</a>
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="compare.html">Comparison</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Data.html">Data</a>
+                    <a class="nav-link" href="data.html">Data</a>
                     <div class="nav-item dropdown">
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
