--- a/visuals_4.html
+++ b/visuals_4.html
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="intro.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://github.com/HeathMo/web_design_challenge">GitHub Link</a>
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="compare.html">Comparison</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Data.html">Data</a>
+                    <a class="nav-link" href="data.html">Data</a>
                     <div class="nav-item dropdown">
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
