updates for images

--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
               <p>Click on a plot for see an analysis.</p>
               <div class="row">
                 <div class="col col-3 col-md-6">
-                  <a href="visuals_1.html"><img class="img-thumbnail" src="Resources/Assets/Images/Fig1.png" alt="Latitude vs Temperature"></a>
+                  <a href="visuals_1.html"><img class="img-thumbnail" src="Images/Fig1.png" alt="Latitude vs Temperature"></a>
                 </div>
                 <div class="col col-3 col-md-6">
-                  <a href="visuals_2.html"><img class="img-thumbnail" src="Resources/Assets/Images/Fig2.png" alt="Latitude vs Humidity"></a>
+                  <a href="visuals_2.html"><img class="img-thumbnail" src="Images/Fig2.png" alt="Latitude vs Humidity"></a>
                 </div>
                 <div class="col col-3 col-md-6">
-                  <a href="visuals_3.html"><img class="img-thumbnail" src="Resources/Assets/Images/Fig3.png" alt="Latitude vs Cloudiness"></a>
+                  <a href="visuals_3.html"><img class="img-thumbnail" src="Images/Fig3.png" alt="Latitude vs Cloudiness"></a>
                 </div>
                 <div class="col col-3 col-md-6">
-                  <a href="visuals_4.html"><img class="img-thumbnail" src="Resources/Assets/Images/Fig4.png" alt="Latitude vs Wind Speed"></a>
+                  <a href="visuals_4.html"><img class="img-thumbnail" src="Images/Fig4.png" alt="Latitude vs Wind Speed"></a>
                 </div>
               </div>  
             </div>
