--- a/compare.html
+++ b/compare.html
@@ -62,19 +62,19 @@
         <div class="row">
           <div class="col-md-6">
             <h3 class="text-center">Latitude vs Max Temperature</h3>
-            <a href="visuals_1.html"><img width="100%" src="Resources/assets/images/Fig1.png"></a>
+            <a href="visuals_1.html"><img width="100%" src="Images/Fig1.png"></a>
           </div>
           <div class="col-md-6">
             <h3 class="text-center">Latitude vs Humidity</h3>
-            <a href="visuals_2.html"><img width="100%" src="Resources/assets/images/Fig2.png"></a>
+            <a href="visuals_2.html"><img width="100%" src="Images/Fig2.png"></a>
           </div>
           <div class="col-md-6">
             <h3 class="text-center">Latitude vs Cloudiness</h3>
-            <a href="visuals_3.html"><img width="100%" src="Resources/assets/images/Fig3.png"></a>
+            <a href="visuals_3.html"><img width="100%" src="Images/Fig3.png"></a>
           </div>
           <div class="col-md-6">
             <h3 class="text-center">Latitude vs Wind Speed</h3>
-            <a href="visuals_4.html"><img width="100%" src="Resources/assets/images/Fig4.png"></a>
+            <a href="visuals_4.html"><img width="100%" src="Images/Fig4.png"></a>
           </div>
 
         </div>
